# loosehead

./: CMakeLists.txt
shaders/: compile_shaders.bat  vertex_shader.cso
src/: application.cpp  application.hpp  dxgi_info_manager.cpp  dxgi_info_manager.hpp  exception.cpp  exception.hpp  graphics.cpp  graphics.hpp  info_manager.cpp  info_manager.hpp  main.cpp  strict_win.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/dxerr/: dxerr.hpp
